# lab-06-multithreaads

./: CMakeLists.txt
.github/workflows/: CI.yml
demo/: main.cpp
include/: functions.hpp  header.hpp  picosha2.h
sources/: functions.cpp
tests/: example.cpp
